[package]
name = "convert-otf-woff2"
version = "0.1.0"
edition = "2021"
authors = ["topit <issac360@live.cn>"]
description = "A WebAssembly module to convert OTF fonts to WOFF2 format."
license = "MIT"
repository = "https://github.com/topit/convert-otf-woff2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
woff = "0.3.4"
opentype = "0.38.1"      # 用于解析和验证 OTF 字体
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = "0.4"

[build-dependencies]
cc = "1.2"  # 如果 woff crate 依赖 C 代码

[profile.release]
lto = true
opt-level = "s"
